force-app/main/default/objects/Sales_Coach_Section_Item__c/Sales_Coach_Section_Item__c.object-meta.xml
<CustomObject>
    <label>Sales Coach Section Item</label>
    <nameField>
        <displayFormat>SCSI-{0000}</displayFormat>
        <label>Sales Coach Section Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Coach Section Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>