force-app/main/default/objects/Sales_Coach_Section_Item__c/fields/Link_to_Content__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Content__c</fullName>
    <label>Link to Content</label>
    <type>Url</type>
</CustomField>