force-app/main/default/objects/Sales_Coach_Section_Item__c/fields/Sales_Coach_Section__c.field-meta.xml
<CustomField>
    <fullName>Sales_Coach_Section__c</fullName>
    <label>Sales Coach Section</label>
    <referenceTo>Sales_Coach_Section__c</referenceTo>
    <relationshipLabel>Sales Coach Section Items</relationshipLabel>
    <relationshipName>Sales_Coach_Section_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>