force-app/main/default/objects/Sales_Coach_Section_Item__c/fields/Section_Ordering__c.field-meta.xml
<CustomField>
    <fullName>Section_Ordering__c</fullName>
    <label>Section Ordering</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>